# advent-of-code

./: Cargo.toml  build.rs  reference.py
src/: cli.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  io.rs  main.rs  solver.rs
src/year2015/: day1.rs  day3.rs  day4.rs  day5.rs  mod.rs
src/year2023/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs
