[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.11", features = ["derive"] }
md5 = "0.7.0"
nom = "7.1.3"
rayon = "1.8.1"
regex = "1.10.2"
